--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -2,7 +2,7 @@
 $menuText: #bfcbd9;
 $menuActiveText: #49aeed;
 $subMenuActiveText: #f4f4f5;
-
+$sideBarDuration: 0.28s;
 $menuBg: #304156;
 $menuHover: #263445;
 
